test isTranscriptionActiveChanged event

--- a/join-calling-to-teams-meeting/index.html
+++ b/join-calling-to-teams-meeting/index.html
@@ -10,6 +10,7 @@
            style="margin-bottom:1em; width: 300px;" />
     <p>Call state <span style="font-weight: bold" id="call-state">-</span></p>
     <p><span style="font-weight: bold" id="recording-state"></span></p>
+    <p><span style="font-weight: bold" id="transcription-state"></span></p>
     <div>
         <button id="join-meeting-button" type="button" disabled="false">
             Join Teams Meeting
